# vorchestra

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  search-index-15e0e311.json  search-index-1e4df8eb.json  search-index-6b3dba76.json  search-index-b3057ee9.json  search.html  sitemap.xml  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
docs/: ARCHITECTURE.md  C4_MODEL.md  COMMANDS.md  CONTRIBUTING_DEV.md  GOOD_FIRST_ISSUES.md  JOBS.md  LANGUAGE.md  intro.html
scripts/: vorchestra-health-check.sh
site/: docusaurus.config.js  package.json  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_runner.rs  dependency_tree.rs  helpers.rs  helpers_tests.rs  jobs.rs  lib.rs  lockfile_report.rs  main.rs  package_analysis.rs  package_catalog.rs  package_hygiene.rs  package_jobs.rs  package_managers.rs  package_ops.rs  package_sizes.rs  policy_engine.rs  process_utils.rs  project_manifest.rs  python_parsers.rs  recycle.rs  runtime_installers.rs  types.rs  venv_diff.rs  venv_freeze.rs  venv_inspection.rs
src-tauri/src/commands/: bundle.rs  cache.rs  diagnostics.rs  files.rs  integrations.rs  integrations_extra.rs  local_ai.rs  lockfile.rs  mod.rs  packages.rs  project.rs  snapshots.rs  system.rs  venv.rs
src-tauri/test-fixtures/: dependency_tree.json  live_freeze.txt  lockfile_freeze.txt  package_hygiene_report.json
(+285 files in other folders)
