[package]
name = "vorchestra"
version = "0.1.1"
description = "VOrchestra - the local-first orchestrator for Python virtual environments"
authors = ["Marco"]
edition = "2021"

[lib]
name = "vorchestra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
tauri = { version = "=2.0.0", features = [] }
tauri-runtime = "=2.0.0"
tauri-utils = "=2.0.0"
tauri-plugin-opener = "=2.0.0"
tauri-plugin-dialog = "=2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pin transitive deps to versions known to compile under Rust 1.85.1.
time = "=0.3.36"
fs_extra = "1.3.0"
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1.0.0", features = ["full"] }
walkdir = "2.5.0"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
dirs = "6.0"

# zbus / zvariant are Linux-only (D-Bus). The pinned 4.x line ships a
# `win32.rs` that imports symbols removed from current `windows_sys`, so
# pulling them on Windows breaks the build. Scoping to Linux keeps the
# Rust 1.85 compat workaround on the only target that actually needs it.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "=4.4.0"
zvariant = "=4.2.0"
